Updated button to clear log messages

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -5,6 +5,6 @@
       {{message}}
     </li>
   </ul>
-  <button class="clear"
+  <button class="c"
  (click)="messageService.clear()" >Clear</button>
 </div>
